# neon

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  PRODUCTION_GUIDE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  WORKSPACE_CONFIG.md  docker-compose.prod.yml  env.example  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  remixed-badc0925.html  scene-preset-schema.json  vercel.json
.github/workflows/: ci.yml  production-deploy.yml
.husky/: commit-msg  pre-push
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: neon-tokyo.json
scripts/: deploy-production.sh  deploy-staging.sh
text-to-video-app/: .bandit  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE_RULES.md  app.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.cfg  test_app.py  utils.py
text-to-video-app/.github/: PULL_REQUEST_TEMPLATE.md
text-to-video-app/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
text-to-video-app/.github/workflows/: ci.yml
