[metadata]
name = text-to-video-app
version = 1.0.0
description = Open-source text-to-video generation web app
long_description = file: README.md
long_description_content_type = text/markdown
author = Text-to-Video Contributors
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Multimedia :: Video
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
install_requires =
    gradio>=4.0.0
    torch>=2.0.0
    torchvision>=0.15.0
    numpy>=1.24.0
    Pillow>=10.0.0
    opencv-python>=4.8.0
    imageio>=2.31.0
    imageio-ffmpeg>=0.4.9
    pydub>=0.25.1
    librosa>=0.10.0
    tqdm>=4.66.0
    python-dotenv>=1.0.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-mock>=3.12.0
    pytest-cov>=4.1.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.5.0
    pre-commit>=3.4.0
    bandit>=1.7.5

[options.packages.find]
exclude =
    tests
    test_*

[bdist_wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
